# llama.cpp

./: .gitignore  AGENT_CONTEXT_IMPLEMENTATION_GUIDE.md  CONTEXT_ANALYSIS_FOR_AI_AGENTS.md
common/: CMakeLists.txt
common/agent/: CMakeLists.txt  agent.cpp  agent.h  conversation.cpp  conversation.h  failure.cpp  failure.h  message.cpp  message.h  registry.cpp  registry.h
docs/: AGENT_QUICKSTART.md  TECHNICAL_IMPLEMENTATION.md  agent-collaboration-integration.md  agent-collaboration-system.md  agent-collaboration.md  agent-to-agent-protocol.md
examples/: CMakeLists.txt
examples/agent-collaboration/: CMakeLists.txt  README.md  collaborative-coding.py  simple-chat.cpp
examples/agent-context/: .gitignore  Makefile  README.md  agent-example.cpp  test-agent-context.cpp
examples/agent-demo/: CMakeLists.txt  agent-demo.cpp
ggml/include/: ggml-agent.h
ggml/src/: CMakeLists.txt
ggml/src/ggml-agent/: CMakeLists.txt  ggml-agent.cpp
include/: agent_context.h  agent_executor.h  agent_memory.h  agent_params.h  agent_tools.h  agent_types.h
llama-py/: .env.example  A2A_INTEGRATION.md  DESIGN.md  HIERARCHICAL_AGENTS.md  README.md  pyproject.toml
llama-py/examples/: a2a_hierarchical_agents.py  agent_function_calling.py  hierarchical_agent_tree.py  multi_provider_agents.py  simple_generation.py
llama-py/llama_cpp/: __init__.py  llama.py
llama-py/llama_cpp/agents/: __init__.py  a2a.py  anthropic.py  base.py  context.py  google.py  hierarchical.py  llama.py  moonshot.py  openai.py
tests/: CMakeLists.txt  README-agent-tests.md  test-agent-collaboration.cpp
tools/server/: CMakeLists.txt  agent-collab-routes.h  agent-collab.cpp  agent-collab.h
